--- a/ex2.html
+++ b/ex2.html
@@ -21,6 +21,6 @@
             return console.log("No se ha encontrado el nombre")
         }
         
-        console.log(sense(scoreBoard, "Dave Thomas"))
+        console.log(sense(scoreBoard, "Freyja Ćirić"))
     </script>
 </html>
